--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "license": "ISC",
   "engines": {
-    "node": ">=9 <=13",
+    "node": ">=9 <=15",
     "npm": "^5.6.0",
     "yarn": "^1.6.0"
   },
@@ -30,7 +30,9 @@
     "cors": "^2.8.5",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "http": "^0.0.1-security",
+    "morgan": "^1.10.0",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
